new/lab2.output
Nonterminals useless in grammar

    TypeSwitchStmt
    TypeSwitchGuard
    TypeCaseClauseList
    TypeCaseClause
    TypeSwitchCase
    Slice


Terminals unused in grammar

    EOL
    METHOD
    NEW
    IOTA
    FLOAT_HEX
    CONST_INT_ERR
    CONST_BIN_ERR
    INT
    STRING
    COMPLEXTYPE
    BYTE
    FLOAT
    RUNE
    UINT
    BOOL_TYPE
    UINTPTR
    ERRORTYPE
    ANYTYPE
    COMPARABLE


Rules useless in grammar

  303 TypeSwitchStmt: SWITCH TypeSwitchGuard '{' TypeCaseClauseList '}'
  304               | SWITCH SimpleStmt SEMICOLON TypeSwitchGuard '{' TypeCaseClauseList '}'

  305 TypeSwitchGuard: id PEQ PrimaryExpr '.' '(' TYPE ')'
  306                | PrimaryExpr '.' '(' TYPE ')'

  307 TypeCaseClauseList: TypeCaseClause TypeCaseClauseList
  308                   | TypeCaseClause

  309 TypeCaseClause: TypeSwitchCase ':' Statements

  310 TypeSwitchCase: CASE TypeList
  311               | DEFAULT

  312 Slice: '[' Expression ':' Expression ']'
  313      | '[' ':' Expression ']'
  314      | '[' Expression ':' ']'
  315      | '[' ':' ']'
  316      | '[' Expression ':' Expression ':' Expression ']'
  317      | '[' ':' Expression ':' Expression ']'


Rules useless in parser due to conflicts

   36 PostStmt: ε

  208 Key: id
  210    | LiteralValue

  212 Element: LiteralValue


State 16 conflicts: 1 shift/reduce
State 20 conflicts: 1 shift/reduce
State 26 conflicts: 10 shift/reduce
State 27 conflicts: 1 shift/reduce
State 35 conflicts: 10 shift/reduce
State 39 conflicts: 1 shift/reduce
State 47 conflicts: 2 shift/reduce
State 78 conflicts: 1 shift/reduce
State 81 conflicts: 41 shift/reduce
State 105 conflicts: 2 shift/reduce, 6 reduce/reduce
State 127 conflicts: 5 shift/reduce
State 129 conflicts: 2 shift/reduce
State 170 conflicts: 3 shift/reduce, 4 reduce/reduce
State 174 conflicts: 1 reduce/reduce
State 175 conflicts: 1 shift/reduce
State 177 conflicts: 27 shift/reduce
State 179 conflicts: 1 shift/reduce
State 180 conflicts: 1 shift/reduce
State 182 conflicts: 42 shift/reduce
State 202 conflicts: 5 shift/reduce, 1 reduce/reduce
State 204 conflicts: 42 shift/reduce
State 207 conflicts: 2 shift/reduce, 1 reduce/reduce
State 214 conflicts: 1 shift/reduce
State 215 conflicts: 1 shift/reduce
State 224 conflicts: 3 reduce/reduce
State 237 conflicts: 2 shift/reduce, 3 reduce/reduce
State 240 conflicts: 3 reduce/reduce
State 249 conflicts: 2 shift/reduce
State 316 conflicts: 5 shift/reduce
State 319 conflicts: 5 shift/reduce
State 320 conflicts: 3 shift/reduce, 5 reduce/reduce
State 321 conflicts: 5 shift/reduce, 3 reduce/reduce
State 360 conflicts: 1 shift/reduce, 5 reduce/reduce
State 361 conflicts: 2 reduce/reduce
State 367 conflicts: 19 shift/reduce
State 374 conflicts: 5 shift/reduce
State 401 conflicts: 5 shift/reduce
State 426 conflicts: 2 reduce/reduce
State 445 conflicts: 41 shift/reduce
State 460 conflicts: 41 shift/reduce
State 472 conflicts: 41 shift/reduce, 3 reduce/reduce
State 476 conflicts: 1 shift/reduce, 1 reduce/reduce
State 481 conflicts: 41 shift/reduce, 3 reduce/reduce


Grammar

    0 $accept: prog $end

    1 prog: PACKAGE IMPORTS
    2     | prog TopLevelDecl

    3 TopLevelDecl: Declaration
    4             | FunctionDecl
    5             | MethodDecl

    6 FunctionDecl: FUNCTION id TypeParameters Signature Block
    7             | FUNCTION id Signature Block
    8             | FUNCTION id Signature
    9             | FUNCTION id TypeParameters Signature

   10 MethodDecl: FUNCTION Receiver id Signature Block

   11 Receiver: Parameters

   12 Statement: Declaration
   13          | SimpleStmt
   14          | GoStmt
   15          | ReturnStmt
   16          | BreakStmt
   17          | ContinueStmt
   18          | GotoStmt
   19          | FALLTHROUGH
   20          | Block
   21          | IfStmt
   22          | SwitchStmt
   23          | SelectStmt
   24          | ForStmt
   25          | DeferStmt

   26 ForStmt: FOR Expression Block
   27        | FOR ForClause Block
   28        | FOR RangeClause Block
   29        | FOR Block

   30 ForClause: InitStmt SEMICOLON Condition SEMICOLON PostStmt

   31 InitStmt: SimpleStmt
   32         | ε

   33 Condition: Expression
   34          | ε

   35 PostStmt: SimpleStmt
   36         | ε

   37 RangeClause: ExpressionList EQ RANGE Expression
   38            | IdentifierList PEQ RANGE Expression
   39            | RANGE Expression

   40 DeferStmt: DEFER Expression

   41 Declaration: ConstDecl
   42            | TypeDecl
   43            | VarDecl

   44 GoStmt: GO Expression

   45 ReturnStmt: RETURN ExpressionList
   46           | RETURN

   47 BreakStmt: BREAK Label
   48          | BREAK

   49 ContinueStmt: CONTINUE Label
   50             | CONTINUE

   51 GotoStmt: GOTO Label
   52         | GOTO

   53 Label: id

   54 SelectStmt: SELECT '{' CommClauseList '}'
   55           | SELECT '{' '}'

   56 CommClauseList: CommClauseList CommClause
   57               | CommClause

   58 CommClause: CommCase ':' Statements

   59 CommCase: CASE SendStmt
   60         | CASE RecvStmt
   61         | DEFAULT

   62 RecvStmt: ExpressionList EQ Expression
   63         | IdentifierList PEQ Expression
   64         | Expression

   65 IfStmt: IF SimpleStmt SEMICOLON Expression Block ELSE IfStmt
   66       | IF SimpleStmt SEMICOLON Expression Block ELSE Block
   67       | IF SimpleStmt SEMICOLON Expression Block
   68       | IF Expression Block
   69       | IF Expression Block ELSE IfStmt
   70       | IF Expression Block ELSE Block

   71 SwitchStmt: ExprSwitchStmt

   72 ExprSwitchStmt: SWITCH SimpleStmt SEMICOLON Expression '{' ExprCaseClauseList '}'
   73               | SWITCH SimpleStmt SEMICOLON '{' ExprCaseClauseList '}'
   74               | SWITCH Expression '{' ExprCaseClauseList '}'
   75               | SWITCH '{' ExprCaseClauseList '}'

   76 ExprCaseClauseList: ExprCaseClause ExprCaseClauseList
   77                   | ExprCaseClause

   78 ExprCaseClause: ExprSwitchCase ':' Statements

   79 ExprSwitchCase: CASE ExpressionList
   80               | DEFAULT

   81 ConstDecl: CONST ConstSpec
   82          | CONST '(' ConstSpecList ')'
   83          | CONST '(' ')'

   84 ConstSpecList: ConstSpec ConstSpecList
   85              | ConstSpec

   86 ConstSpec: IdentifierList ConstExpr
   87          | IdentifierList

   88 ConstExpr: Type EQ ExpressionList
   89          | EQ ExpressionList

   90 TypeDecl: TYPE TypeSpec
   91         | TYPE '(' TypeSpecList ')'
   92         | TYPE '(' ')'

   93 TypeSpecList: TypeSpec TypeSpecList
   94             | TypeSpec

   95 TypeSpec: AliasDecl
   96         | TypeDef

   97 AliasDecl: id EQ Type

   98 TypeDef: id TypeParameters Type

   99 TypeParameters: '[' TypeParamList ']'
  100               | '[' TypeParamList ',' ']'
  101               | ε

  102 TypeParamList: TypeParamDecl ',' TypeParamList
  103              | TypeParamDecl

  104 TypeParamDecl: IdentifierList TypeConstraint

  105 TypeConstraint: TypeElem

  106 VarDecl: VAR VarSpec
  107        | VAR '(' VarSpecList ')'
  108        | VAR '(' ')'

  109 VarSpecList: VarSpec VarSpecList
  110            | VarSpec

  111 VarSpec: IdentifierList Type
  112        | IdentifierList Type EQ ExpressionList
  113        | IdentifierList EQ ExpressionList

  114 SimpleStmt: Assignment
  115           | Expression
  116           | SendStmt
  117           | IncDecStmt
  118           | EmptyStatement

  119 EmptyStatement: ε

  120 SendStmt: Channel POINTER Expression

  121 Channel: Expression

  122 IncDecStmt: Expression INC
  123           | Expression DEC

  124 Assignment: IdentifierList PEQ ExpressionList
  125           | IdentifierList EQ ExpressionList
  126           | ExpressionList EQ ExpressionList
  127           | ExpressionList ADDEQ ExpressionList
  128           | ExpressionList DIVEQ ExpressionList
  129           | ExpressionList DECEQ ExpressionList
  130           | ExpressionList MULEQ ExpressionList
  131           | ExpressionList MODEQ ExpressionList
  132           | ExpressionList LSHIFTEQ ExpressionList
  133           | ExpressionList RSHIFTEQ ExpressionList
  134           | ExpressionList XOREQ ExpressionList
  135           | ExpressionList ANDXOREQ ExpressionList
  136           | ExpressionList ANDEQ ExpressionList
  137           | ExpressionList OREQ ExpressionList

  138 Expression: UnaryExpr
  139           | Expression binary_op Expression

  140 binary_op: OR
  141          | AND
  142          | rel_op
  143          | add_op
  144          | mul_op

  145 mul_op: '*'
  146       | '/'
  147       | '%'
  148       | LSHIFT
  149       | RSHIFT
  150       | '&'
  151       | AMP_EXP

  152 add_op: '-'
  153       | XOR
  154       | '|'
  155       | '+'

  156 rel_op: EQUAL
  157       | NOTEQUAL
  158       | '<'
  159       | '>'
  160       | LESSOREQUAL
  161       | GREATEROREQUAL

  162 UnaryExpr: PrimaryExpr
  163          | '+' UnaryExpr
  164          | '-' UnaryExpr
  165          | '!' UnaryExpr
  166          | XOR UnaryExpr
  167          | '*' UnaryExpr
  168          | '&' UnaryExpr
  169          | POINTER UnaryExpr

  170 PrimaryExpr: Operand
  171            | PrimaryExpr Arguments
  172            | MethodExpr
  173            | Conversion
  174            | PrimaryExpr Selector
  175            | PrimaryExpr Index
  176            | PrimaryExpr TypeAssertion

  177 Conversion: Type '(' ExpressionList ')'
  178           | Type '(' ExpressionList ',' ')'

  179 MethodExpr: Type '.' id

  180 Operand: id '.' id
  181        | id
  182        | BasicLit
  183        | CompositeLit
  184        | FunctionLit
  185        | '(' ExpressionList ')'

  186 BasicLit: int_lit
  187         | float_lit
  188         | imaginary_lit
  189         | RUNE_LIT
  190         | CONST_CHAR
  191         | CONST_STRING
  192         | BOOL

  193 CompositeLit: LiteralType LiteralValue
  194             | LiteralValue

  195 LiteralType: StructType
  196            | ArrayType
  197            | '[' POINT ']' Type
  198            | SliceType
  199            | MapType
  200            | id

  201 LiteralValue: '{' ElementList '}'
  202             | '{' ElementList ',' '}'
  203             | '{' '}'

  204 ElementList: ElementList ',' KeyedElement
  205            | KeyedElement

  206 KeyedElement: Key ':' Element
  207             | Element

  208 Key: id
  209    | Expression
  210    | LiteralValue

  211 Element: Expression
  212        | LiteralValue

  213 int_lit: CONST_BIN
  214        | CONST_HEX
  215        | CONST_OCTAL
  216        | CONST_INT

  217 imaginary_lit: IMAGINARY_LIT

  218 float_lit: DECIMAL_FLOAT_LIT
  219          | HEX_FLOAT_LIT

  220 FunctionLit: FUNCTION Signature Block

  221 Block: '{' Statements '}'

  222 Statements: Statements Statement
  223           | Statement

  224 Selector: '.' id

  225 Index: '[' Expression ']'
  226      | '[' Expression ',' ']'

  227 TypeAssertion: '.' '(' Type ')'

  228 Arguments: '(' ExpressionList ')'
  229          | '(' ExpressionList ',' ')'
  230          | '(' ExpressionList POINT ')'
  231          | '(' Type ',' ')'
  232          | '(' Type POINT ')'
  233          | '(' Type ')'
  234          | '(' Type ',' ExpressionList ')'
  235          | '(' ')'

  236 ExpressionList: ExpressionList ',' Expression
  237               | Expression

  238 Type: id
  239     | id '.' id
  240     | id TypeArgs
  241     | id '.' id TypeArgs
  242     | '(' Type ')'
  243     | ArrayType
  244     | PointerType
  245     | StructType
  246     | FunctionType
  247     | InterfaceType
  248     | SliceType
  249     | MapType
  250     | ChannelType

  251 TypeArgs: '[' TypeList ']'
  252         | '[' TypeList ',' ']'

  253 TypeList: Type ',' TypeList
  254         | Type

  255 TypeName: id
  256         | id '.' TypeName

  257 ArrayType: '[' Expression ']' Type

  258 StructType: STRUCT '{' DeclList '}'
  259           | STRUCT '{' '}'

  260 DeclList: FieldDecl DeclList
  261         | FieldDecl

  262 FieldDecl: IdentifierList Type CONST_STRING
  263          | IdentifierList Type
  264          | EmbeddedField CONST_STRING
  265          | EmbeddedField

  266 EmbeddedField: '*' TypeName TypeArgs
  267              | TypeName TypeArgs
  268              | '*' TypeName
  269              | TypeName

  270 PointerType: '*' Type

  271 FunctionType: FUNCTION Signature

  272 Signature: Parameters '(' ParameterList ')'
  273          | Parameters '(' ')'
  274          | Parameters '(' ParameterList ',' ')'
  275          | Parameters Type
  276          | Parameters

  277 Parameters: '(' ParameterList ')'
  278           | '(' ')'
  279           | '(' ParameterList ',' ')'

  280 ParameterList: ParameterDecl ',' ParameterList
  281              | ParameterDecl

  282 ParameterDecl: IdentifierList POINT Type
  283              | IdentifierList Type
  284              | IdentifierList
  285              | POINT Type

  286 IdentifierList: id
  287               | id ',' IdentifierList

  288 InterfaceType: INTERFACE '{' InterfaceElemList '}'
  289              | INTERFACE '{' '}'

  290 InterfaceElemList: InterfaceElem InterfaceElemList
  291                  | InterfaceElem

  292 InterfaceElem: id Signature
  293              | TypeElem

  294 TypeElem: TypeTerm '|' TypeElem
  295         | TypeTerm

  296 TypeTerm: id
  297         | '~' Type

  298 SliceType: '[' ']' Type

  299 MapType: MAP '[' Type ']' Type

  300 ChannelType: CHAN Type
  301            | CHAN POINTER id
  302            | POINTER CHAN Type


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 165
    '%' (37) 147
    '&' (38) 150 168
    '(' (40) 82 83 91 92 107 108 177 178 185 227 228 229 230 231 232 233 234 235 242 272 273 274 277 278 279
    ')' (41) 82 83 91 92 107 108 177 178 185 227 228 229 230 231 232 233 234 235 242 272 273 274 277 278 279
    '*' (42) 145 167 266 268 270
    '+' (43) 155 163
    ',' (44) 100 102 178 202 204 226 229 231 234 236 252 253 274 279 280 287
    '-' (45) 152 164
    '.' (46) 179 180 224 227 239 241 256
    '/' (47) 146
    ':' (58) 58 78 206
    '<' (60) 158
    '>' (62) 159
    '[' (91) 99 100 197 225 226 251 252 257 298 299
    ']' (93) 99 100 197 225 226 251 252 257 298 299
    '{' (123) 54 55 72 73 74 75 201 202 203 221 258 259 288 289
    '|' (124) 154 294
    '}' (125) 54 55 72 73 74 75 201 202 203 221 258 259 288 289
    '~' (126) 297
    error (256)
    PACKAGE (258) 1
    IMPORTS (259) 1
    FUNCTION (260) 6 7 8 9 10 220 271
    id (261) 6 7 8 9 10 53 97 98 179 180 181 200 208 224 238 239 240 241 255 256 286 287 292 296 301
    VAR (262) 106 107 108
    EOL (263)
    CONST (264) 81 82 83
    METHOD (265)
    IF (266) 65 66 67 68 69 70
    ELSE (267) 65 66 69 70
    SWITCH (268) 72 73 74 75
    CASE (269) 59 60 79
    FALLTHROUGH (270) 19
    DEFAULT (271) 61 80
    FOR (272) 26 27 28 29
    BREAK (273) 47 48
    RANGE (274) 37 38 39
    NEW (275)
    SELECT (276) 54 55
    RETURN (277) 45 46
    MAP (278) 299
    GO (279) 44
    GOTO (280) 51 52
    INTERFACE (281) 288 289
    CHAN (282) 300 301 302
    CONTINUE (283) 49 50
    DEFER (284) 40
    CONST_INT (285) 216
    CONST_CHAR (286) 190
    CONST_STRING (287) 191 262 264
    BOOL (288) 192
    IOTA (289)
    CONST_OCTAL (290) 215
    CONST_HEX (291) 214
    CONST_BIN (292) 213
    FLOAT_HEX (293)
    DECIMAL_FLOAT_LIT (294) 218
    HEX_FLOAT_LIT (295) 219
    RUNE_LIT (296) 189
    IMAGINARY_LIT (297) 217
    CONST_INT_ERR (298)
    CONST_BIN_ERR (299)
    INT (300)
    STRING (301)
    COMPLEXTYPE (302)
    BYTE (303)
    FLOAT (304)
    RUNE (305)
    UINT (306)
    BOOL_TYPE (307)
    TYPE (308) 90 91 92
    STRUCT (309) 258 259
    UINTPTR (310)
    ERRORTYPE (311)
    ANYTYPE (312)
    COMPARABLE (313)
    ADDEQ (314) 127
    DECEQ (315) 129
    OREQ (316) 137
    XOREQ (317) 134
    MULEQ (318) 130
    DIVEQ (319) 128
    MODEQ (320) 131
    LSHIFTEQ (321) 132
    RSHIFTEQ (322) 133
    ANDEQ (323) 136
    ANDXOREQ (324) 135
    EQ (325) 37 62 88 89 97 112 113 125 126
    INC (326) 122
    DEC (327) 123
    EQUAL (328) 156
    NOTEQUAL (329) 157
    GREATEROREQUAL (330) 161
    LESSOREQUAL (331) 160
    AND (332) 141
    OR (333) 140
    LSHIFT (334) 148
    RSHIFT (335) 149
    PEQ (336) 38 63 124
    XOR (337) 153 166
    SEMICOLON (338) 30 65 66 67 72 73
    AMP_EXP (339) 151
    POINT (340) 197 230 232 282 285
    POINTER (341) 120 169 301 302


Nonterminals, with rules where they appear

    $accept (107)
        on left: 0
    prog (108)
        on left: 1 2
        on right: 0 2
    TopLevelDecl (109)
        on left: 3 4 5
        on right: 2
    FunctionDecl (110)
        on left: 6 7 8 9
        on right: 4
    MethodDecl (111)
        on left: 10
        on right: 5
    Receiver (112)
        on left: 11
        on right: 10
    Statement (113)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25
        on right: 222 223
    ForStmt (114)
        on left: 26 27 28 29
        on right: 24
    ForClause (115)
        on left: 30
        on right: 27
    InitStmt (116)
        on left: 31 32
        on right: 30
    Condition (117)
        on left: 33 34
        on right: 30
    PostStmt (118)
        on left: 35 36
        on right: 30
    RangeClause (119)
        on left: 37 38 39
        on right: 28
    DeferStmt (120)
        on left: 40
        on right: 25
    Declaration (121)
        on left: 41 42 43
        on right: 3 12
    GoStmt (122)
        on left: 44
        on right: 14
    ReturnStmt (123)
        on left: 45 46
        on right: 15
    BreakStmt (124)
        on left: 47 48
        on right: 16
    ContinueStmt (125)
        on left: 49 50
        on right: 17
    GotoStmt (126)
        on left: 51 52
        on right: 18
    Label (127)
        on left: 53
        on right: 47 49 51
    SelectStmt (128)
        on left: 54 55
        on right: 23
    CommClauseList (129)
        on left: 56 57
        on right: 54 56
    CommClause (130)
        on left: 58
        on right: 56 57
    CommCase (131)
        on left: 59 60 61
        on right: 58
    RecvStmt (132)
        on left: 62 63 64
        on right: 60
    IfStmt (133)
        on left: 65 66 67 68 69 70
        on right: 21 65 69
    SwitchStmt (134)
        on left: 71
        on right: 22
    ExprSwitchStmt (135)
        on left: 72 73 74 75
        on right: 71
    ExprCaseClauseList (136)
        on left: 76 77
        on right: 72 73 74 75 76
    ExprCaseClause (137)
        on left: 78
        on right: 76 77
    ExprSwitchCase (138)
        on left: 79 80
        on right: 78
    ConstDecl (139)
        on left: 81 82 83
        on right: 41
    ConstSpecList (140)
        on left: 84 85
        on right: 82 84
    ConstSpec (141)
        on left: 86 87
        on right: 81 84 85
    ConstExpr (142)
        on left: 88 89
        on right: 86
    TypeDecl (143)
        on left: 90 91 92
        on right: 42
    TypeSpecList (144)
        on left: 93 94
        on right: 91 93
    TypeSpec (145)
        on left: 95 96
        on right: 90 93 94
    AliasDecl (146)
        on left: 97
        on right: 95
    TypeDef (147)
        on left: 98
        on right: 96
    TypeParameters (148)
        on left: 99 100 101
        on right: 6 9 98
    TypeParamList (149)
        on left: 102 103
        on right: 99 100 102
    TypeParamDecl (150)
        on left: 104
        on right: 102 103
    TypeConstraint (151)
        on left: 105
        on right: 104
    VarDecl (152)
        on left: 106 107 108
        on right: 43
    VarSpecList (153)
        on left: 109 110
        on right: 107 109
    VarSpec (154)
        on left: 111 112 113
        on right: 106 109 110
    SimpleStmt (155)
        on left: 114 115 116 117 118
        on right: 13 31 35 65 66 67 72 73
    EmptyStatement (156)
        on left: 119
        on right: 118
    SendStmt (157)
        on left: 120
        on right: 59 116
    Channel (158)
        on left: 121
        on right: 120
    IncDecStmt (159)
        on left: 122 123
        on right: 117
    Assignment (160)
        on left: 124 125 126 127 128 129 130 131 132 133 134 135 136 137
        on right: 114
    Expression (161)
        on left: 138 139
        on right: 26 33 37 38 39 40 44 62 63 64 65 66 67 68 69 70 72 74 115 120 121 122 123 139 209 211 225 226 236 237 257
    binary_op (162)
        on left: 140 141 142 143 144
        on right: 139
    mul_op (163)
        on left: 145 146 147 148 149 150 151
        on right: 144
    add_op (164)
        on left: 152 153 154 155
        on right: 143
    rel_op (165)
        on left: 156 157 158 159 160 161
        on right: 142
    UnaryExpr (166)
        on left: 162 163 164 165 166 167 168 169
        on right: 138 163 164 165 166 167 168 169
    PrimaryExpr (167)
        on left: 170 171 172 173 174 175 176
        on right: 162 171 174 175 176
    Conversion (168)
        on left: 177 178
        on right: 173
    MethodExpr (169)
        on left: 179
        on right: 172
    Operand (170)
        on left: 180 181 182 183 184 185
        on right: 170
    BasicLit (171)
        on left: 186 187 188 189 190 191 192
        on right: 182
    CompositeLit (172)
        on left: 193 194
        on right: 183
    LiteralType (173)
        on left: 195 196 197 198 199 200
        on right: 193
    LiteralValue (174)
        on left: 201 202 203
        on right: 193 194 210 212
    ElementList (175)
        on left: 204 205
        on right: 201 202 204
    KeyedElement (176)
        on left: 206 207
        on right: 204 205
    Key (177)
        on left: 208 209 210
        on right: 206
    Element (178)
        on left: 211 212
        on right: 206 207
    int_lit (179)
        on left: 213 214 215 216
        on right: 186
    imaginary_lit (180)
        on left: 217
        on right: 188
    float_lit (181)
        on left: 218 219
        on right: 187
    FunctionLit (182)
        on left: 220
        on right: 184
    Block (183)
        on left: 221
        on right: 6 7 10 20 26 27 28 29 65 66 67 68 69 70 220
    Statements (184)
        on left: 222 223
        on right: 58 78 221 222
    Selector (185)
        on left: 224
        on right: 174
    Index (186)
        on left: 225 226
        on right: 175
    TypeAssertion (187)
        on left: 227
        on right: 176
    Arguments (188)
        on left: 228 229 230 231 232 233 234 235
        on right: 171
    ExpressionList (189)
        on left: 236 237
        on right: 37 45 62 79 88 89 112 113 124 125 126 127 128 129 130 131 132 133 134 135 136 137 177 178 185 228 229 230 234 236
    Type (190)
        on left: 238 239 240 241 242 243 244 245 246 247 248 249 250
        on right: 88 97 98 111 112 177 178 179 197 227 231 232 233 234 242 253 254 257 262 263 270 275 282 283 285 297 298 299 300 302
    TypeArgs (191)
        on left: 251 252
        on right: 240 241 266 267
    TypeList (192)
        on left: 253 254
        on right: 251 252 253
    TypeName (193)
        on left: 255 256
        on right: 256 266 267 268 269
    ArrayType (194)
        on left: 257
        on right: 196 243
    StructType (195)
        on left: 258 259
        on right: 195 245
    DeclList (196)
        on left: 260 261
        on right: 258 260
    FieldDecl (197)
        on left: 262 263 264 265
        on right: 260 261
    EmbeddedField (198)
        on left: 266 267 268 269
        on right: 264 265
    PointerType (199)
        on left: 270
        on right: 244
    FunctionType (200)
        on left: 271
        on right: 246
    Signature (201)
        on left: 272 273 274 275 276
        on right: 6 7 8 9 10 220 271 292
    Parameters (202)
        on left: 277 278 279
        on right: 11 272 273 274 275 276
    ParameterList (203)
        on left: 280 281
        on right: 272 274 277 279 280
    ParameterDecl (204)
        on left: 282 283 284 285
        on right: 280 281
    IdentifierList (205)
        on left: 286 287
        on right: 38 63 86 87 104 111 112 113 124 125 262 263 282 283 284 287
    InterfaceType (206)
        on left: 288 289
        on right: 247
    InterfaceElemList (207)
        on left: 290 291
        on right: 288 290
    InterfaceElem (208)
        on left: 292 293
        on right: 290 291
    TypeElem (209)
        on left: 294 295
        on right: 105 293 294
    TypeTerm (210)
        on left: 296 297
        on right: 294 295
    SliceType (211)
        on left: 298
        on right: 198 248
    MapType (212)
        on left: 299
        on right: 199 249
    ChannelType (213)
        on left: 300 301 302
        on right: 250


State 0

    0 $accept: • prog $end

    PACKAGE  shift, and go to state 1

    prog  go to state 2


State 1

    1 prog: PACKAGE • IMPORTS

    IMPORTS  shift, and go to state 3


State 2

    0 $accept: prog • $end
    2 prog: prog • TopLevelDecl

    $end      shift, and go to state 4
    FUNCTION  shift, and go to state 5
    VAR       shift, and go to state 6
    CONST     shift, and go to state 7
    TYPE      shift, and go to state 8

    TopLevelDecl  go to state 9
    FunctionDecl  go to state 10
    MethodDecl    go to state 11
    Declaration   go to state 12
    ConstDecl     go to state 13
    TypeDecl      go to state 14
    VarDecl       go to state 15


State 3

    1 prog: PACKAGE IMPORTS •

    $default  reduce using rule 1 (prog)


State 4

    0 $accept: prog $end •

    $default  accept


State 5

    6 FunctionDecl: FUNCTION • id TypeParameters Signature Block
    7             | FUNCTION • id Signature Block
    8             | FUNCTION • id Signature
    9             | FUNCTION • id TypeParameters Signature
   10 MethodDecl: FUNCTION • Receiver id Signature Block

    id   shift, and go to state 16
    '('  shift, and go to state 17

    Receiver    go to state 18
    Parameters  go to state 19


State 6

  106 VarDecl: VAR • VarSpec
  107        | VAR • '(' VarSpecList ')'
  108        | VAR • '(' ')'

    id   shift, and go to state 20
    '('  shift, and go to state 21

    VarSpec         go to state 22
    IdentifierList  go to state 23


State 7

   81 ConstDecl: CONST • ConstSpec
   82          | CONST • '(' ConstSpecList ')'
   83          | CONST • '(' ')'

    id   shift, and go to state 20
    '('  shift, and go to state 24

    ConstSpec       go to state 25
    IdentifierList  go to state 26


State 8

   90 TypeDecl: TYPE • TypeSpec
   91         | TYPE • '(' TypeSpecList ')'
   92         | TYPE • '(' ')'

    id   shift, and go to state 27
    '('  shift, and go to state 28

    TypeSpec   go to state 29
    AliasDecl  go to state 30
    TypeDef    go to state 31


State 9

    2 prog: prog TopLevelDecl •

    $default  reduce using rule 2 (prog)


State 10

    4 TopLevelDecl: FunctionDecl •

    $default  reduce using rule 4 (TopLevelDecl)


State 11

    5 TopLevelDecl: MethodDecl •

    $default  reduce using rule 5 (TopLevelDecl)


State 12

    3 TopLevelDecl: Declaration •

    $default  reduce using rule 3 (TopLevelDecl)


State 13

   41 Declaration: ConstDecl •

    $default  reduce using rule 41 (Declaration)


State 14

   42 Declaration: TypeDecl •

    $default  reduce using rule 42 (Declaration)


State 15

   43 Declaration: VarDecl •

    $default  reduce using rule 43 (Declaration)


State 16

    6 FunctionDecl: FUNCTION id • TypeParameters Signature Block
    7             | FUNCTION id • Signature Block
    8             | FUNCTION id • Signature
    9             | FUNCTION id • TypeParameters Signature

    '('  shift, and go to state 17
    '['  shift, and go to state 32

    '('  [reduce using rule 101 (TypeParameters)]

    TypeParameters  go to state 33
    Signature       go to state 34
    Parameters      go to state 35


State 17

  277 Parameters: '(' • ParameterList ')'
  278           | '(' • ')'
  279           | '(' • ParameterList ',' ')'

    id     shift, and go to state 20
    POINT  shift, and go to state 36
    ')'    shift, and go to state 37

    ParameterList   go to state 38
    ParameterDecl   go to state 39
    IdentifierList  go to state 40


State 18

   10 MethodDecl: FUNCTION Receiver • id Signature Block

    id  shift, and go to state 41


State 19

   11 Receiver: Parameters •

    $default  reduce using rule 11 (Receiver)


State 20

  286 IdentifierList: id •
  287               | id • ',' IdentifierList

    ','  shift, and go to state 42

    ','       [reduce using rule 286 (IdentifierList)]
    $default  reduce using rule 286 (IdentifierList)


State 21

  107 VarDecl: VAR '(' • VarSpecList ')'
  108        | VAR '(' • ')'

    id   shift, and go to state 20
    ')'  shift, and go to state 43

    VarSpecList     go to state 44
    VarSpec         go to state 45
    IdentifierList  go to state 23


State 22

  106 VarDecl: VAR VarSpec •

    $default  reduce using rule 106 (VarDecl)


State 23

  111 VarSpec: IdentifierList • Type
  112        | IdentifierList • Type EQ ExpressionList
  113        | IdentifierList • EQ ExpressionList

    FUNCTION   shift, and go to state 46
    id         shift, and go to state 47
    MAP        shift, and go to state 48
    INTERFACE  shift, and go to state 49
    CHAN       shift, and go to state 50
    STRUCT     shift, and go to state 51
    EQ         shift, and go to state 52
    POINTER    shift, and go to state 53
    '('        shift, and go to state 54
    '['        shift, and go to state 55
    '*'        shift, and go to state 56

    Type           go to state 57
    ArrayType      go to state 58
    StructType     go to state 59
    PointerType    go to state 60
    FunctionType   go to state 61
    InterfaceType  go to state 62
    SliceType      go to state 63
    MapType        go to state 64
    ChannelType    go to state 65


State 24

   82 ConstDecl: CONST '(' • ConstSpecList ')'
   83          | CONST '(' • ')'

    id   shift, and go to state 20
    ')'  shift, and go to state 66

    ConstSpecList   go to state 67
    ConstSpec       go to state 68
    IdentifierList  go to state 26


State 25

   81 ConstDecl: CONST ConstSpec •

    $default  reduce using rule 81 (ConstDecl)


State 26

   86 ConstSpec: IdentifierList • ConstExpr
   87          | IdentifierList •

    FUNCTION   shift, and go to state 46
    id         shift, and go to state 47
    MAP        shift, and go to state 48
    INTERFACE  shift, and go to state 49
    CHAN       shift, and go to state 50
    STRUCT     shift, and go to state 51
    EQ         shift, and go to state 69
    POINTER    shift, and go to state 53
    '('        shift, and go to state 54
    '['        shift, and go to state 55
    '*'        shift, and go to state 56

    FUNCTION   [reduce using rule 87 (ConstSpec)]
    id         [reduce using rule 87 (ConstSpec)]
    MAP        [reduce using rule 87 (ConstSpec)]
    INTERFACE  [reduce using rule 87 (ConstSpec)]
    CHAN       [reduce using rule 87 (ConstSpec)]
    STRUCT     [reduce using rule 87 (ConstSpec)]
    POINTER    [reduce using rule 87 (ConstSpec)]
    '('        [reduce using rule 87 (ConstSpec)]
    '['        [reduce using rule 87 (ConstSpec)]
    '*'        [reduce using rule 87 (ConstSpec)]
    $default   reduce using rule 87 (ConstSpec)

    ConstExpr      go to state 70
    Type           go to state 71
    ArrayType      go to state 58
    StructType     go to state 59
    PointerType    go to state 60
    FunctionType   go to state 61
    InterfaceType  go to state 62
    SliceType      go to state 63
    MapType        go to state 64
    ChannelType    go to state 65


State 27

   97 AliasDecl: id • EQ Type
   98 TypeDef: id • TypeParameters Type

    EQ   shift, and go to state 72
    '['  shift, and go to state 32

    '['       [reduce using rule 101 (TypeParameters)]
    $default  reduce using rule 101 (TypeParameters)

    TypeParameters  go to state 73


State 28

   91 TypeDecl: TYPE '(' • TypeSpecList ')'
   92         | TYPE '(' • ')'

    id   shift, and go to state 27
    ')'  shift, and go to state 74
